--- a/custom.css
+++ b/custom.css
@@ -1,3 +1,4 @@
+/** base **/
 #content.mw-body,
 #content.mw-body h1,
 #content.mw-body h2,
@@ -29,6 +30,9 @@
 }
 
 /** Layout **/
+
+
+
 
 #content.mw-body {
     margin-left:0;
@@ -65,6 +69,42 @@
 
 #philgo-logo .philgo-title {
     padding-top:0.4em;
+}
+
+
+/** ------------------------------ 오른쪽 상단 광고 ---------------------------- **/
+#ad-top-right {
+    position:absolute;
+    top:.5em;
+    right:0.4em;
+    font-family: "Malgun Gothic", AppleGothic, Gulim, serif;
+}
+@media all and (max-width: 600px) {
+    #ad-top-right .caption {
+        display: none;
+    }
+}
+
+/** ------------------------------ 로그인 정보를 맨 아래로 내림 ---------------------------------- **/
+#footer #p-personal {
+    position: static;
+    top:0;
+    left:0;
+    right:auto;
+}
+#footer #p-personal:after {
+    display:block;
+    content:'';
+    clear:both;
+}
+
+
+
+/** ------------------------ 하단 부분 ; footer --------------------------------- **/
+@media screen and (min-width: 982px) {
+    div#footer {
+        padding:0!important;
+    }
 }
 
 
