--- a/custom.css
+++ b/custom.css
@@ -85,6 +85,22 @@
     }
 }
 
+#ad-bottom {
+    margin:1em 0;
+    padding:1em;
+    box-sizing: border-box;
+    background-color: #6688bb;
+    color:white;
+    font-size:1.1em;
+}
+#ad-bottom-a {
+    text-decoration: none;
+}
+#ad-bottom-a:hover {
+    text-decoration: none;
+}
+
+
 /** ------------------------------ 로그인 정보를 맨 아래로 내림 ---------------------------------- **/
 #footer #p-personal {
     position: static;
