--- a/custom.css
+++ b/custom.css
@@ -92,6 +92,7 @@
     background-color: #6688bb;
     color:white;
     font-size:1.1em;
+    line-height: 180%;
 }
 #ad-bottom-a {
     text-decoration: none;
