--- a/custom.css
+++ b/custom.css
@@ -165,6 +165,10 @@ div#footer {
 }
 
 /** ----- Place TOC on TOP RIGHT ( position:absolute ). It needs space on TOP RIGHT for TOC ------ **/
+#toc {
+    float:right;
+}
+
 /*
 #toc {
     position: absolute;
